--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 fastapi
 uvicorn
 
-
 #for template
 jinja2
 
-
 #for static files
 aiofiles
+
+#for database   #new
+sqlalchemy         
+psycopg2-binary # replacing-> psycopg2
+
+#for loading environment variables  #new
+python-dotenv
