--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       POSTGRES_PASSWORD: mdegier
       POSTGRES_DB: test_db
       PGDATA: /var/lib/postgresql/data
+    networks: 
+      - backend
     volumes:
         - db-data:/var/lib/postgresql/data
     ports:
@@ -23,9 +25,26 @@ services:
       PGADMIN_DEFAULT_PASSWORD: root
     ports:
       - "8082:80"
+    networks: 
+      - backend
     volumes:
-      - pgadmin-data:/var/lib/pgadmin  
-           
+      - pgadmin-data:/var/lib/pgadmin
+
+  app:
+    build: .      
+    container_name: appjobs
+    ports: 
+       - "8000:80"
+    networks: 
+      - backend
+    volumes: 
+       - ./:/app
+    depends_on:
+      - db
+
+networks:
+  backend:
+
 volumes:
   db-data:
       name: postgress_db_data
