removed html documentation from git

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,10 @@ python-dotenv
 
 #for email validation            #new
 pydantic[email] 
+
+# documentation with sphinx
+# sphinx
+sphinx
+sphinx-rtd-theme
+sphinxcontrib-ansibleautodoc
+sphinxcontrib-websupport
